# aggregator

./: CMakeLists.txt  setup.py
examples/: CMakeLists.txt  admin.c  client.c  server.c
include/aggregator/: aggregator-admin.h  aggregator-backend.h  aggregator-client.h  aggregator-common.h  aggregator-provider-handle.h  aggregator-server.h  aggregator-stream.h
src/: CMakeLists.txt  admin.c  admin.h  aggregator-admin.pc.in  aggregator-client.pc.in  aggregator-config.cmake.in  aggregator-server.pc.in  bedrock-module.cpp  client.c  client.h  provider.cpp  provider.h  types.h
src/dummy/: dummy-backend.cpp  dummy-backend.h
tests/: CMakeLists.txt  test-admin.c  test-client.c
